eks-by-argocd/code/source/fibonacci_backend_cache/k8s/fibonacci-cache-service.yml
apiVersion: v1
kind: Service
metadata:
  name: fibonacci-backend-cache-service
  namespace: fibonacci
spec:
  selector:
    app: fibonacci-backend-cache-service
  ports:
    - protocol: TCP
      port: 8080
