eks-by-argocd/code/source/fibonacci_backend_cache/k8s/fibonacci-cache-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fibonacci-ingress
  namespace: fibonacci
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /fibonacci
            backend:
              service:
                name: fibonacci-cache-service
                port:
                  number: 8080
